# windows_file_info_rs

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs
